# ODESolverService

./: .env.example  .gitignore  .gitmodules  README.md  compose.yaml  data.json  data_example.json  docker-compose.override.yml
API_gateway/: Dockerfile  pom.xml
API_gateway/src/main/java/vkr/zelenev/ode_systems/: LibraryController.java  QueueConfig.java  RabbitConfig.java  SolutionWebSocketHandler.java
API_gateway/src/main/resources/: application.properties
API_gateway/src/test/java/vkr/zelenev/ode_systems/: OdeSystemsApplicationTests.java
Julia_server/: Dockerfile  Manifest.toml  server.jl
cpp_GSL_server/: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile
cpp_GSL_server/src/: main.cpp
cpp_GSL_server/src/consumer/: Consumer.cpp  Consumer.hpp
cpp_GSL_server/src/helpers/: ExpressionsParser.cpp  ExpressionsParser.hpp  ExpressionsStorage.cpp  ExpressionsStorage.hpp  JSONHelper.cpp  JSONHelper.hpp  Publisher.cpp  Publisher.hpp
cpp_GSL_server/src/ode_solver/: DoubleSolution.cpp  DoubleSolution.hpp  EnumMethods.hpp  Solution.cpp  Solution.hpp  SolutionBuffer.cpp  SolutionBuffer.hpp  Solver.cpp  Solver.hpp  Task.hpp
monitoring/: prometheus-alerts.yml  prometheus.yml
spring_adapter_server/ode_systems/: pom.xml
spring_adapter_server/ode_systems/src/main/resources/: application.properties
spring_proxy_server/ode_systems/: Dockerfile  pom.xml
spring_proxy_server/ode_systems/src/main/resources/: application.properties
сервер Julia/: Dockerfile  server.jl
(+7 files in other folders)
